<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/second_top_guideLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19015048" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />


    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/icon"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="@id/left_guideLine"
        app:layout_constraintTop_toBottomOf="@+id/top_guideLine"
        app:layout_constraintWidth_percent="0.2" />

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:text="@string/user_name"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toEndOf="@id/imgUser"
        app:layout_constraintTop_toTopOf="@id/imgUser" />

    <TextView
        android:id="@+id/textUserdetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:text="@string/user_details"
        android:textColor="@color/mainly_green"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toEndOf="@id/imgUser"
        app:layout_constraintTop_toBottomOf="@id/textUsername" />

    <ImageView
        android:id="@+id/btnNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/notification"
        app:layout_constraintBottom_toBottomOf="@id/textUsername"
        app:layout_constraintEnd_toStartOf="@id/right_guideLine"
        app:layout_constraintTop_toTopOf="@id/textUsername" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCalls"
        style="@style/btn_call_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calls"
        app:icon="@drawable/ic_calls"
        app:layout_constraintEnd_toStartOf="@+id/btnTasks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/second_top_guideLine" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTasks"
        style="@style/btn_task_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/tasks"
        app:icon="@drawable/check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCalls"
        app:layout_constraintTop_toTopOf="@id/second_top_guideLine" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReports"
        style="@style/btn_reports_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/reports"
        app:icon="@drawable/files"
        app:layout_constraintEnd_toStartOf="@+id/btnAttendance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCalls" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAttendance"
        style="@style/btn_attendance_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/attendance_leaving"
        app:icon="@drawable/finger_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnReports"
        app:layout_constraintTop_toBottomOf="@id/btnTasks" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCases"
        style="@style/btn_cases_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/cases"
        app:icon="@drawable/ic_cases"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnReports"
     />


</androidx.constraintlayout.widget.ConstraintLayout>