<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMedicalRecord"
        style="@style/btn_medical_request"
        android:text="@string/medical_record"
        app:icon="@drawable/ic_m_record"
        app:layout_constraintBottom_toTopOf="@id/btnRequest"
        app:layout_constraintEnd_toStartOf="@id/btnMedicalMeasurement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMedicalMeasurement"
        style="@style/btn_medical_request"
        android:text="@string/medical_measurement"
        app:icon="@drawable/ic_m_measurement"
        app:layout_constraintBottom_toBottomOf="@id/btnMedicalRecord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnMedicalRecord"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRequest"
        style="@style/btn_request"
        android:text="@string/request"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btnMedicalMeasurement"
        app:layout_constraintStart_toStartOf="@id/btnMedicalRecord"
        app:layout_constraintTop_toBottomOf="@id/btnMedicalRecord" />
</androidx.constraintlayout.widget.ConstraintLayout>